system/css/seotoaster.css
/* CSS Document */

/*=========== General ============= */
body, body.seotoaster {
	margin:0;
	padding:0;
}
.seotoaster {
	color:#666;
	/*background-color: #BDE6F1;*/
	/*background-color:#E1E1E1;*/
	position:relative;
	/*font-family:"helvetica neue",Helvetica,sans-serif,Tahoma;*/
	font-family:tahoma, geneva, verdana, sans-serif;
	display:block;
	overflow:hidden;
	border: 2px solid #fff;
    font-size:11pt;
	background: #dae8ed /*#BDE6F1*/;

	-moz-background-clip: padding; -webkit-background-clip: padding-box; background-clip: padding-box;
}

.error,
.errors {
	background-color: indianred !important;
}
.success {
	background-color: /*cadetBlue*/ #7097ae;
}

.success, .error {
	cursor: pointer;
	display: none;
	position: fixed;
    left:0;
    right:0;
	z-index: 999;
	text-align: center;
    padding: 15px;
	margin: 0;
	font-size: 25px;
    font-weight: normal;
    font-family:tahoma, geneva, verdana, sans-serif;
	color: #fff;
	opacity: 0.95;
}
.seotoaster .success, .seotoaster .error {
   top:34px;
   border-left: 2px solid #fff;
   border-right: 2px solid #fff;
}
.success ul, .error ul{
    padding:20px 5%;
    font-weight:bold;
    list-style-type: square;
}
.success ul li, .error ul li{
	border-bottom:1px dashed lavender;
	margin-bottom:10px;
}

.success ul li ul, .error ul li ul{
	padding:2px;
	font-weight:normal;
	list-style-type: none;

}
.success ul li ul li, .error ul li ul li{
    border:none;
    margin:0;
}

.seotoaster .header {
	background-color:#666;
	color:#eee;
	padding: 7px 0 2px 8px;
	margin-bottom:10px;
	height:22px;
	-webkit-border-radius: 3px 3px 0 0;
	-moz-border-radius: 3px 3px 0 0;
	border-radius: 3px 3px 0 0;
	font-size:11pt;
}
.seotoaster .closebutton, .seotoaster .closebutton-list {
	color: #FFFFFF;
	cursor:pointer;
	font-weight: bold;
	/*padding: 8px 0 8px 0;*/
	height:32px;
	position: absolute;
	right: 0;
	top: 0;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	overflow: hidden;
}

.seotoaster .closebutton span.close, .seotoaster .closebutton-list span.close-list {
	display:block;
    width: 19px;
    height: 18px;
    border: 1px solid #666;
    background: url("../uithemes/seotoasterui/images/ui-icons_ffffff_256x240.png") -95px -127px no-repeat;
    text-indent: -5000em;
	margin: 5px;
    font-size: 0;
	float:left;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
}
.seotoaster .closebutton span.close:hover {
  background: url("../uithemes/seotoasterui/images/ui-icons_454545_256x240.png") -95px -127px no-repeat #E6E6FA;
  border-color: #bbb;
}
.seotoaster .closebutton span.help {
    background: none repeat scroll 0 0 #666666;
    color: lightBlue;
    font-size: 8pt;
    font-weight: normal;
    /*padding:7px 10px 12px 10px;*/
	padding: 9px;
    text-shadow: 0.02em  0 0.03em #FFFFFF;
    display: block;
    float: left;
}
.seotoaster .closebutton span.help:hover {
    text-decoration:underline;
}

.seotoaster .mdel-button {
	float: left;
}

.seotoaster .delete-selected {
	font-size:10pt;
	margin-top: 7px;
	color: #cd5c5c;
	font-weight: bold;
	float: left;
}

.seotoaster span.circle {
  background-color: #bbb;
  padding: 10px;
  border-radius:45px;
  -moz-border-radius:45px;
  -webkit-border-radius:45px;
  color: #fff;
}

a.generator-links img {
    background-color: transparent !important;
    border: medium none !important;
    height: 26px !important;
    position: relative !important;
    width: 26px !important;
    z-index: 100 !important;
}
a.generator-links.plugin {
    background:url(../images/editadd-plugin.png) no-repeat #F68B0E left center;
    border: 1px solid #7C7C7C;
    border-radius: 2px;
    -moz-border-radius: 2px;
    -webkit-border-radius: 2px;
    color: white;
    display: inline-block;
    font-family: verdana;
    font-size: 11px;
    height: 11px;
    font-weight: bold;
    margin-top: 6px;
    padding: 2px 5px 5px 20px;
    text-decoration: none;
    text-transform: uppercase
}
.seotoaster .ajaxspineer {
	background: url('../images/fl.gif') no-repeat scroll 50% 0 transparent;
	height: 65px;
}

.seotoaster .items-list {
	background: #fff;
	color: #21759B;
	overflow-x: hidden;
	overflow-y: auto;
    padding: 0;
}

.seotoaster .items-list .list-row {
	overflow: hidden;
    border-bottom: 1px dashed #ccc;
    padding: 8px 0 5px;
    font-size: 10pt;
}
.seotoaster .items-list .list-row:hover {
  background: #f9f9f9;
  cursor: pointer;
}
.seotoaster .items-list .list-row .list-row-item {
	font-size: 10pt;
	overflow: hidden;
}
.seotoaster #fa-list .list-row .list-row-item.grid_4 input, .seotoaster #fa-list .list-row .list-row-item.grid_2 a {
  margin-left: 18px;
}


.seotoaster .red { color:red; }
/*==== Links ========*/
.seotoaster a {
	color:#3C78A7;
	text-decoration:none;
}
.seotoaster .header a {
	color:#e7e7e7;
}
.seotoaster .header a:hover { /*border-bottom:1px solid #e7e7e7;*/ }
.seotoaster a:hover { }
.seotoaster a:visited { }
.seotoaster a:active { }
/*Logo style*/
/*====== Headers ======= */
.seotoaster h1, .seotoaster h2, .seotoaster h3, .seotoaster h4, .seotoaster h5, .seotoaster h6 { font-weight:bold; }
.seotoaster h1 { font-size:22px; }
.seotoaster h2 {
	font:normal 27px;
	margin-bottom:10px;
}
.seotoaster h3 {
	color:#4c4c4c;
	font-size:14px;
	font-weight:bold;
	padding:8px 2px 2px;
}
.seotoaster h4 { font-size:16px; }
.seotoaster h5 { font-size:14px; }
.seotoaster h6 { font-size:13px; }
.seotoaster h7 { font-size:12px; }
/*====== Listings ======= */
.seotoaster ul { margin:10px 20px; }
.seotoaster ul li { list-style:square; }
.seotoaster ol { padding:10px; }
.seotoaster ol li { list-style:decimal-leading-zero; }
/*========= Formats ===========*/
.seotoaster p {
	/*line-height:1.5em;*/
	/*overflow: hidden;
	margin: 5px 0;*/
}
.seotoaster blockquote { }
.seotoaster address { }
/* ... */

